--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,28 +9,28 @@
         android:id="@+id/btn_scanning"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="点击扫描图片"/>
+        android:text="点击扫描图片" />
 
     <Button
         android:id="@+id/btn_select"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="从相册选择图片进行识别"/>
+        android:layout_marginTop="10dp"
+        android:text="从相册选择图片进行识别" />
 
 
     <EditText
         android:id="@+id/et_input"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="请输入内容"/>
+        android:layout_marginTop="30dp"
+        android:hint="请输入内容" />
 
     <Button
         android:id="@+id/generate_qr_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="点击生成二维码"/>
+        android:text="点击生成二维码" />
 
     <ImageView
         android:id="@+id/iv_qr_image"
@@ -45,5 +45,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="长按二维码图片或者点击我识别"/>
+        android:text="长按二维码图片或者点击我识别" />
 </LinearLayout>
