--- a/app/src/main/res/layout/title_top_white.xml
+++ b/app/src/main/res/layout/title_top_white.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_title"
     android:layout_width="fill_parent"
     android:layout_height="44dp"
@@ -27,27 +27,27 @@
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
-        android:gravity="left|center"/>
+        android:gravity="left|center" />
 
     <View
         android:id="@+id/view_top_left"
         android:layout_width="100dp"
         android:layout_height="44dp"
         android:layout_alignParentLeft="true"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent" />
 
     <TextView
         android:id="@+id/txt_top_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text=""
+        android:ellipsize="end"
         android:maxEms="10"
         android:maxLines="1"
-        android:ellipsize="end"
-        android:textStyle="bold"
+        android:text=""
         android:textColor="@color/black_color"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_top_right"
@@ -60,7 +60,7 @@
         android:gravity="right|center"
         android:textColor="#373737"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/iv_top_right"
@@ -69,12 +69,12 @@
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
         android:layout_marginRight="15dp"
-        android:gravity="left|center"/>
+        android:gravity="left|center" />
 
     <View
         android:id="@+id/view_top_right"
         android:layout_width="100dp"
         android:layout_height="44dp"
         android:layout_alignParentRight="true"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent" />
 </RelativeLayout>
